# ChangeLog for media-libs/gstreamer
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.355 2013/10/22 07:20:26 ago Exp $

  22 Oct 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.10.ebuild:
  Stable for sparc, wrt bug #480908

  16 Oct 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.10.ebuild:
  Stable for ia64, wrt bug #480908

  16 Oct 2013; Jeroen Roovers <jer@gentoo.org> gstreamer-1.0.10.ebuild:
  Stable for HPPA (bug #480908).

  15 Oct 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.10.ebuild:
  Stable for alpha, wrt bug #480908

  14 Oct 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.10.ebuild:
  Stable for arm, wrt bug #480908

  13 Oct 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.10.ebuild:
  Stable for ppc64, wrt bug #480908

  12 Oct 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.10.ebuild:
  Stable for ppc, wrt bug #480908

  11 Oct 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.10.ebuild:
  Stable for x86, wrt bug #480908

  10 Oct 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.10.ebuild:
  Stable for amd64, wrt bug #480908

*gstreamer-1.2.0 (29 Sep 2013)

  29 Sep 2013; Gilles Dartiguelongue <eva@gentoo.org> +gstreamer-1.2.0.ebuild:
  Version bump.

*gstreamer-1.0.10 (01 Sep 2013)

  01 Sep 2013; Gilles Dartiguelongue <eva@gentoo.org> +gstreamer-1.0.10.ebuild:
  Version bump.

*gstreamer-1.0.8 (11 Aug 2013)

  11 Aug 2013; Gilles Dartiguelongue <eva@gentoo.org> +gstreamer-1.0.8.ebuild:
  Version bump.

*gstreamer-1.0.7 (08 Jun 2013)

  08 Jun 2013; Gilles Dartiguelongue <eva@gentoo.org> +gstreamer-1.0.7.ebuild:
  Version bump.

*gstreamer-1.0.6 (31 Mar 2013)

  31 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org> +gstreamer-1.0.6.ebuild:
  Version bump.

  05 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org>
  -gstreamer-0.10.35.ebuild, -gstreamer-1.0.3.ebuild, -gstreamer-1.0.5.ebuild:
  Clean up old revisions.