@@ -1,37 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX gstreamer-0.10.36-disable-test_fail_abstract_new.patch 1319 SHA256 05f71ddb15e048cc5ac04362e85892e42077b8bce5e3efb573000d6384b03d6e SHA512 6d2ef5d837551481c85b75edc9246049ca237d8b7efd462646a39ce5526a9b309a6390f2257930bfc54383c9b13447002b2c61f777d38e717995eee6030f5198 WHIRLPOOL 501c5ac7ac73bececad06bda4f21c2131d305d13a773c9e59160e8df9f33bb7989c3ae544e093ee240d8e3e27f315b23e494f5927b2de64ba2fded92eb42ef58
 DIST gstreamer-0.10.36.tar.xz 3025876 SHA256 9151aa108c177054387885763fa0e433e76780f7c5655c70a5390f2a6c6871da SHA512 7468abb578398681d2adb0e9bbc9ee8ae25aaef72369d45a66ada6c67d1759afdce606cb32e68d9e30ae813196bdfef3d4d33202bc77839cc1fbf5fc436c1bd8 WHIRLPOOL 03b841624552be860d4bf824bde9d6d5d6afc629048244b02037c96370c88191f34a6d09f02af61f295a9d6f84952efec2c5d4b0a28e8e70cd17966ed1b01d93
 DIST gstreamer-1.0.10.tar.xz 3140588 SHA256 8e0aa9f41370586171a2616326fbc508bc4b61ffc4d55b2a8c4c3459d0cc1130 SHA512 bf50d6406f181301824557d19a74910a06ec13ed21a1151f0c081e0d1f4ef18a7fc118ad9226a36d7288b22af4669637a412ff9a93085761c511efdeeaa3f2a0 WHIRLPOOL cb0e62e0cc58798e144e6319563188520e3b1e7a2baef234e85154d64906f8bede8a421d1c83abc15dfbbd48901cae14f479e42313922b6c4e54dc29f8c46450
 DIST gstreamer-1.0.5.tar.xz 3130428 SHA256 26c2827567f09a46d0a3bc1e7f8696b2ae72b047306539178079abae487c5b77 SHA512 17d5e96a42a4c475971483be04272ce486d69df819c3ed8415ca5fcad4657628a5d0405b3e1c06c19f2bfc7936125330871d3751e3057f05521b6afeaee0a85a WHIRLPOOL 322725e2a5093f90a02bdde92cb04a989db5c57720e397a5e2cee103f484cb80d31d1eac98fa89836089d4ff6c3ba37c7e29d2be0e5d35d5420258a6f49bbbf8
-DIST gstreamer-1.0.6.tar.xz 3136000 SHA256 50d4050cd6a23684b6bbf40a9b7c132edfb39fe9db2d81980adaa6e72f4d5826 SHA512 6d9f84ba9e92fa06a531ce9387bbf88b02847c13ab98712ce597aad6653ba2800563bd9353ea5b6330c5f1b9b5040c29cb7b692c49aae7bd355bf8660324b1b4 WHIRLPOOL e61f43a89056278b1a470e977d90ab9f7fdd16e82c2c9b2c4beed1726ae9fbad5edf35c6a2219199dc0e48bc7e1f6e08f66e7ec45be0ed86f834d556c7b42f3e
-DIST gstreamer-1.0.7.tar.xz 3089280 SHA256 68cada7ee24ede23e15dc81ccde11898eed1a7a3c6a2d81a8c31596fccb1b5ce SHA512 6e129cafcabd412026f9ff40e475a383406ad8eb9de5020310a1f98d0fea44a3ae69f8d285745f7a42e91f96d3d4c55ea706b497a35008bbab206fa71a17997a WHIRLPOOL fa8d65207678cf3c233048a83ef749e1de5b3c88fc2c0ad3545a0c116f335301d4f3207c64e6fe76c26b922b5eb3394fa997aa4424cd71bdc108267754f5123c
-DIST gstreamer-1.0.8.tar.xz 3138212 SHA256 ff70f45509566b88e35986971ace5e89cb6cb232e9ca249f84502abceef1762d SHA512 17b19383a535564a0e8f5d5792e52dfae359ce1c9f55b09321fbc5c9f5be4c41c1957f70d987a4812ec7d97f2f5cda77339163d928e5b5ff2c334c0bf6c804c3 WHIRLPOOL 9e2cde4801ab4aa6479d074b1dd00666a127fd4ed0752b403e82641cc791cdefaf627267e2d182623f27a3fc3e1560d046ffe4d93ee8e9e6f7a5d2e3e763f219
 DIST gstreamer-1.2.0.tar.xz 3194556 SHA256 94af5274299f845adf41cc504e0209b269acab7721293f49850fea27b4099463 SHA512 e5d7d9a3fb7de88f1be8696a37b8d2de48b5aa0f47b1c04a0924f61c83a7b18450222240f130401d89218fb2ff584c1243547d2bb3c0fdcbd790c9c4d7df2abe WHIRLPOOL 2d90ae8084ebda7628216845e14242d73d4f7bbf37fd0f2b33e4a7a476965087fc8cbbe5cdbee553e5b4bb3e6fbf6512b5c65ab58669428b792d5d040c847a8b
+DIST gstreamer-1.2.3.tar.xz 3219944 SHA256 0f9a9817a384b3448c368c23345e5122435caef9c00f1c40d7b1953827b0d8eb SHA512 0b682c6873fcea413c2a639036caf5a2117785cf59c7537be983692591585eecf098f87087eef7a4260a5dcc82186cc8f512825f27bff32a2fb771d45fd1a6c2 WHIRLPOOL 043eb54098e0a010c3adec0a6d11eb57e898815f767498ea8423809ed010f3adb7703030f7a6e02663120992b9813c9af2b3c20c0dadfa579cf73a3a746c8f79
 EBUILD gstreamer-0.10.36.ebuild 3131 SHA256 8fceb51e0b76fe8bf25a70c747563864dcae37fac04d00eb491ebabd2d0448e6 SHA512 acde683a2d05bb83e8ad5ee0ce3e29a147488964826e1ca05de3fdfe91c7ee067c564aceca4cb2f7d815386fd3b7b40694739a69663cd8d47350a1ad670f1187 WHIRLPOOL 8cb0b98f3b2c188b163640a5ee8c0557610dc684de9268fd9a866dba9f74e02d2d5ce39c6558e0215b72f08839e9f0edff660a602caade6b6d8159c3a854333a
 EBUILD gstreamer-1.0.10.ebuild 2229 SHA256 aa43ce5e4bf60c5e042b0fcec71b4c3f855ad5857f63ebab4303d8a87084a0a7 SHA512 09e7ef95f4ba9bfad62d3608c18eadddae1c230e2897f02337bd3d6c4542dd70bfb3cfab9eb255624350792e09323e1dd6351bf9f0757c725598ce7d3a40d48a WHIRLPOOL bc9f4b366cb1c7f12a8c4e9a4068931335c3a14da074ee3b0c75381d9126b66e87deec409e1e4ad574d4fc4c137633bfa8cfade51029e6f8f7e52ecb1c121e28
 EBUILD gstreamer-1.0.5-r1.ebuild 2230 SHA256 dab07463d983ca54f9627cbf85c1d80013d37bee9cc17a1a7d993eb7f2a1b85d SHA512 6d168567cf46a1735094b51990c88fb20b026662c1018e59dae0e42fc8853ec869e3b64e80e2e1bd9bd44ebbcd1e2738ed5354b04623af45da3c0fbe6ff5811d WHIRLPOOL cc3cfaa49b744df5b625626f0ec81585790d4edc6baf816a22b30677b1c7c4f58efc6190133de8af8e06d1efc64f0c912837f2cd4e7eaff02428592dc2cb5689
-EBUILD gstreamer-1.0.6.ebuild 2236 SHA256 0bcee2c76732dd72b08429320fc880190633d678adaa5ba11c7951583cb9ee5f SHA512 0103c22b75c12aa42da6d7bb5db20bedca201cce74feab747f7ce17da5738bce82786a9a2646eae03d87ad6c4fa50b0b4b72c3886bd8f2f0ccfeddefd32937ca WHIRLPOOL aad09ef236010bd5b347d348632c42c645eae7b70247ef4d3417d65e30b3b906bf09a4f6bdb4a83ffe8155ee85fa42e533800041388a92dd3238220b05daa1a5
-EBUILD gstreamer-1.0.7.ebuild 2236 SHA256 f2f317645fc4a2a74eaa509e0b62837e04033ef24aa8bae1d2bb0432b3ad3417 SHA512 c3b77d359c5e473ff8716a9f05d6144d4f4bb1610a217ad1c24c953ae2db04c52b20789d7e8d551c9fd842f9ce5bb70f4b3c23fc7a2e8f7169a97aa350c375a4 WHIRLPOOL 3e3c910a1c1580c38ec53d72ca1503cb5e8a821bff67be4e373c1a858e68cdd08d4e0c98eafb939bed43ac750e5baf42bc69d783f905e692bf41d629a4177cb2
-EBUILD gstreamer-1.0.8.ebuild 2236 SHA256 3dd3466130163ed72e2a1a4416ff40b93ca55801422daeb165750149dd0427df SHA512 2d4742ef7448a3b4f0ffab0da56b4ca92b12f39a6dbc11d8f6df0e627cbbd84114529c7fc683e6892ed3fc81d7028c7cb5f9955794e6819e61b8ec012f69659e WHIRLPOOL fc2fd261b4ed61a63449ddcc98ecc44c6ba569a81f0b7805898834a1b2b476f483638646668d1952af8cde52fdc907a6124b12fdc88eef8b4b292ac494dc96b6
 EBUILD gstreamer-1.2.0.ebuild 2236 SHA256 cf179a1d81f041b78b649914916d55fac5beb75ece8778c6c4d57245ff496aa7 SHA512 4c1f425fd4e82bd71ffbf9d29836be90241d1f6fbdb01f0cba2734c6e8abfaf09c5127456876023da4a2d48903948cabdcd3620b7827d1a36229cb3a98b39b80 WHIRLPOOL d889f76055d5c975887f2d82db6906eeae5a48d499c4a69be3cd51c59b18a2d2782c45c44486cdbdfd1a1e020cefd6ca0457e27d320e4a071837a686b19a8145
-MISC ChangeLog 47216 SHA256 3f9bd8528b0d53690b653cca7a51372fab77002585f763ae2628da8b4fb8e85c SHA512 f3d9a50e3d63d3b74c90ee5df588d9c2dfc6cf8e67823de5afa9f89027f3ab8f6e3386553ee59d76b0f6826b9982df21e0a83f2a24892e9f89d8ef93dc3cf746 WHIRLPOOL b9b3032ec0ba0461c30583625733de5bb3ea84b95c6b06a44fb9915d38bbf60af50e8fccaa26c3f2c94f0225dd3f7468ababce606265544c3cd3f159a4eadc2f
+EBUILD gstreamer-1.2.3.ebuild 2236 SHA256 0ed12d8464bba4fa4d5aa8979e6ba905669d76ada43be688b87417d87e07c44e SHA512 be9df633e0edd671b68fa487cd8aa81ae1fcdb97284e6bb7639df7808af195de93c5e6672b249da0ec51270cc7fabecb49fdb2372d125dc970121cdea580b783 WHIRLPOOL 2ad49a881edb2407ffabefa4c27f4cc831e6cd4575460b39c622ebf6f2d58196deb9295f35590e594390bf1c9c95927c9cfbc26332c6741ebd029b1ada4e9150
+MISC ChangeLog 47445 SHA256 c6a5243f52c2dd94958ce26d36fbe23ec5876425dc40e43c64654dba2605aecb SHA512 e5ee4fb2c9ca66d6413fd8817f440a14972b302d7ffb3b28eed9f90319ecfacd633208bc49fd5c4e04aafbc9c4800052b90d510dad0fc3cf5d722a721aa9dd25 WHIRLPOOL 835fd1bd6d6442228c0388b8d66aa037c61e946015167323d2d7ee51a205aec07218741f72a8b94b0ed98f573e65124e3df47633dcf3e7c5c33acf946068a715
 MISC metadata.xml 356 SHA256 56bce20bed627cb8a3aabba94b49891f2fc9c62001d873e6ebf06ec53fd1072e SHA512 0cdd5271f2df57644bc7d8fee21a291984b93bb63d07fc5da0f8299b99d96752a10ff06f1a19f85c7caf84e41219d187ed94e21575ab7ba495f68e7f53ddb499 WHIRLPOOL 6e5407c243fa4fea8e475434da67fc4fcab0ec13603a8998cd844c39dffaf2642dded7bf49c6ecc69bf600176a710f89a1f525eb7c60de2249cf829366877e47
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSZic6AAoJELp701BxlEWf8M4P/2RufNrWmI+1fd3RHNqTI1Wm
-NmMeRoepYzfXxJDzPALnPwG8d4wSt2pNr3Ct32Ed6l8z+Y1uyALTaFKipiZZnuG5
-PiS0Sx0FevUfIHriIsiBCp9g7lrxGW55QwyyG+1k3snuJFOsUtCH24H7fYQXJWar
-QyAc6S+/naYqzRpCQGYaWZ7fD2x2bYd2MHpdHKeleXUEdmYzmeXc3zPhA8PXqGdT
-wVSSlO3VenmxzwBqdugjXAdqX7xvJ2Gq0cC2FNsjvHnKBmKCRvw/fo0qHfUDl/Vj
-Jp+yVMwktIbLeTGXj3RzamiWGeRiy/l3ohQRm76ntskry4XBgjzY2oW3XJLwD1Jf
-bfhs9vadh8t6RWzXfkezq8Xx0LKmv9WtLZmuxF6uO7oQJcgkt9A0hgip9XprfDuU
-lEfSGt+TeH0GXMTnkVvp0iuy1+ppjt1Qs2vZUwOFoczfeLOofzrTTbfALtCMKU9U
-8cUaRN785F3fJC04lHcYdX5bkZxd2JtnF1sCnmxxuHGFGr9pBGmenjoyIeSzo4iw
-D0ylRzQCf/BqH594cMwSE3yPnUBtvBK8w7Sa4Xqu9upta0hysbanir+cxehYXFLs
-Q7JotF8CIt4rOYcns6wyKqCJ82awR1bqYfTC7iOllbDEhHhw9KLS0aWNaAgvdwkG
-D2rEr1Nh+EXUQ4wWUced
-=3CcU
+iEYEAREIAAYFAlL6r4wACgkQ1fmVwcYIWAaaxgCdHP1bYsTC17lgp6/xdDWjjGRP
+mc8AnjaJ7MadAkfJFIugeUy9+FwnNduH
+=8Ask
 -----END PGP SIGNATURE-----
