@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/gstreamer-1.0.8.ebuild,v 1.1 2013/08/11 21:20:40 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/gstreamer-1.2.3.ebuild,v 1.1 2014/02/11 23:17:31 eva Exp $
 
 EAPI="5"
 
