@@ -1,13 +1,0 @@
-DEFINED_PHASES=configure install
-DEPEND=>=dev-libs/glib-2.32:2 introspection? ( >=dev-libs/gobject-introspection-1.31.1 ) app-arch/xz-utils >=dev-util/gtk-doc-am-1.12 sys-devel/bison sys-devel/flex virtual/pkgconfig nls? ( sys-devel/gettext )
-DESCRIPTION=Streaming media framework
-EAPI=5
-HOMEPAGE=http://gstreamer.freedesktop.org/
-IUSE=+introspection nls +orc test
-KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris
-LICENSE=LGPL-2+
-RDEPEND=>=dev-libs/glib-2.32:2 introspection? ( >=dev-libs/gobject-introspection-1.31.1 )
-SLOT=1.0
-SRC_URI=http://gstreamer.freedesktop.org/src/gstreamer/gstreamer-1.0.8.tar.xz
-_eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	pax-utils	2424f959506320f5196de8f79fa05297	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=121df10251394bc0df0bfb500432a159
