@@ -8,6 +8,6 @@ KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sh ~sparc ~x86 ~amd64
 LICENSE=LGPL-2+
 RDEPEND=>=dev-libs/glib-2.32:2 introspection? ( >=dev-libs/gobject-introspection-1.31.1 )
 SLOT=1.0
-SRC_URI=http://gstreamer.freedesktop.org/src/gstreamer/gstreamer-1.0.6.tar.xz
+SRC_URI=http://gstreamer.freedesktop.org/src/gstreamer/gstreamer-1.2.3.tar.xz
 _eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	pax-utils	2424f959506320f5196de8f79fa05297	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=51919c1a4a1d2975a3df2ef9db27fa7e
+_md5_=12eb2494bab4205357445900d7e7fd19
