@@ -5,7 +5,8 @@ EAPI=4
 HOMEPAGE=http://joeyh.name/code/wmbattery/
 KEYWORDS=~amd64 ~ppc -sparc ~x86
 LICENSE=GPL-2
+RDEPEND=sys-apps/apmd x11-libs/libX11 x11-libs/libXext x11-libs/libXpm
 SLOT=0
 SRC_URI=mirror://debian/pool/main/w/wmbattery/wmbattery_2.41.tar.gz
 _eclasses_=autotools	d76ee21296238133bd2df8dea7f33a05	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=55ef8bfec2ed21a8efcdcd8c3575f2bb
+_md5_=664ad74adcc2c11df94463d0eee40818
