@@ -5,7 +5,8 @@ EAPI=5
 HOMEPAGE=http://joeyh.name/code/wmbattery/
 KEYWORDS=~amd64 ~ppc -sparc ~x86
 LICENSE=GPL-2
+RDEPEND=sys-apps/apmd sys-power/upower x11-libs/libX11 x11-libs/libXext x11-libs/libXpm
 SLOT=0
 SRC_URI=mirror://debian/pool/main/w/wmbattery/wmbattery_2.42.tar.gz
 _eclasses_=autotools	d76ee21296238133bd2df8dea7f33a05	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=3efc58e5c423ab1a2604d7c03350f921
+_md5_=add6c2cfe91d837ecc81d0a72ac649b8
