@@ -5,14 +5,14 @@ DIST wmbattery_2.40.tar.gz 37070 SHA256 1e94be618e0b103054ac897d7fcca7972dfc11ec
 DIST wmbattery_2.41.tar.gz 37971 SHA256 1dd3ec541d55558e14161d2d6219c6242b50fb00faf2a23e2c3d9fcad2237e18 SHA512 123b965d3e35c5f4b4d77a1a57b82e9d2e8cf021386e00716adb52776ec6094bc3f62652ef70b3c667adf75c7633be91884422809c0669c2f714ed667c557114 WHIRLPOOL 20b9b50b65b0555683353c4e8e9e0c4a8425715d55b95836386d2193d79a4c5582e8bfed1dc6b8a4440c0cb41a4659df4804d12d59ff3392c0660c97cc8f7282
 DIST wmbattery_2.42.tar.gz 38881 SHA256 6e57d163443e2d31951d2238eeaadbbe71dbcc0a92c44e7e1f27598eb2c87b75 SHA512 f59b721bd6c59da7730bdee5a092036713c9e3fa4ed8b58d331a9ba67a2fc9e08095c98d77356bb9a95833284fc53f1ff38cb1c818ddbbbc23c756d2cbbd2b8f WHIRLPOOL 2137a80d92939e2307883a598188e282dbb9e279ba335d326754f8fbe5934caeca1dca0d95803f95926364d5b238d6f2486b8ce502b372582be88507e0451be0
 EBUILD wmbattery-2.40.ebuild 796 SHA256 d54907e6170e96b1cb91b4b41e027df37e62332b00c12d8f0f0c43049c09937f SHA512 fce1637c676b505ae6ba590c42ab355b73d2e95901422d57eda26dd83a9b3d707f3c9fb381974ba48a859594f00925f71df18b5276f241cf3f868c53983c1b7a WHIRLPOOL 0049c2bd4993304fcb5125f421683d651d0fdec546b39e4ee7deef2228c8daf2ea129ac97cbce6b7456788244f30ef6333ec646760a053d68d9023513421eb57
-EBUILD wmbattery-2.41.ebuild 796 SHA256 c88449b508beac768b4385a7a99fb388a90ee55d74bd25acbb28c466853a926e SHA512 5732b979f3976c95e38ac318b6f8ca4932ae4d4f36042706a386e2750cc8b1690dbe20491c95a9fbf1f47348998dab31c5dbb16dc9e66a639e272c70869f364a WHIRLPOOL 0016d6f48a42c260d6fb2b56b66cd1ad8eaa09e1c749b740cd4f6610c416ca79333585fde9a45069060c7aa8c7fe67bf6f4b24cd4c42667fa8068b5f7701a492
-EBUILD wmbattery-2.42.ebuild 747 SHA256 7b77f48bf29a478f75ca99074896bf44e65d131227730ee3bc7d49de4ecb18c8 SHA512 9f2893e052f207216eb462f46cdd350316790d99be79f7230471b759d920356cb91c8cb6af9ef2d8bed0785425ed38b437b3a52a1b401dc0867a55fb27453441 WHIRLPOOL fabf7c7696530a171984ffc474e0172805c49601214ed09c61a3a15859a0ed12300c20e87df7340ce61c01d170158a75f95d5b3ab71bcad183a33b96b392b8df
-MISC ChangeLog 3604 SHA256 acad9bff839d595f44fa76ef4bf11ac259e80d6b7e4dd8fe80238ef6e1156a7e SHA512 90badb66da9a685ac82dec5fe0018e0a436b155ecda4e99d9621585775c56f5645c5ecf34712d39d2916b8e4d6e3e911cd580ef4e327dfdb00578c78c8a9f866 WHIRLPOOL 1e0ffacfb56eeef6cebee2ca88cb31bd52a47d1a2c66b1c3691bee3593f7e7b2f2fbbc0f1ec46cd4757e39f985b9eac3f80b5f47b160eb04bde3489066104028
+EBUILD wmbattery-2.41.ebuild 816 SHA256 358b1819da3f8b5ccffa11939398a4d1161778ab82a086ce977b13f3c938420b SHA512 4d863b3fa178c23279fa1d2db41f5197bab155a4c08c956017d48ad4c5369ec3b4bf3087ca300904884356c2f9aee6242fca46306fd65e1deeac641e899142d3 WHIRLPOOL c23a250d13eed18ffdfa69c7d6e302e7082ca55e3471156713d0516135fd1578ce0b72a4485d6207826544678d5a3a4f34e9b3cc53795448bccb623ee4c6315f
+EBUILD wmbattery-2.42.ebuild 767 SHA256 c460b7e5ce3b0a9185c55a62da9da1a6c3333b2ccc3f8e6252108c32e37f60fc SHA512 5a74b7d4c60b308297c78a07f686c76f53a54b52fd5666a0150c3b8d811c1bdd377f86068d3604d31971b01d9e7e334de94a4bc64366de475b453c0dd5f1a4fc WHIRLPOOL 29c2119300060b501a39b0d288891bd36f3f25b373675739db6b532f112c68b098cf55265deafdf3659326c4f7567cd1fd2228fca44b8a1d8829c238f86e3703
+MISC ChangeLog 3748 SHA256 e5fe7a972a090f9861b170367de2e524f70ed86864e38e2f6b9324c44f16bbfb SHA512 e62648821b8828dfdc99a0b99d5af095b72b24c7b445f3f1a32cf85506f1b490bf978655701576a270889070b2c34e7b36cdf9d387cd93266afdfea3754ecce7 WHIRLPOOL 2c90edc8fb35cf7dfc29bf00f11c4aa4437518460760f5ce0147fe268de375d65d438fa96d30c59642a1a42606636d217bad402068cf950b480bd15ef7f05f61
 MISC metadata.xml 510 SHA256 99c27a1b6d7bd330dcc1ed00a2c50f6c11c7a010d5719f9cfcee71e44d8c1608 SHA512 39bf83a9a0b0b5d13fba9a71e1849bb2e5913d7524c9f2ff13edb9cf9b1cfa4ea3651cd0cd21fb4e333b61d6f70e78685b2908dd6ef63b874ca1ad4c52545f85 WHIRLPOOL e2896c9ebf2a6f04e925149075824bfa4d5574cb5b967244ecdd97ab964308bdd3969d5e412d867b94382e65fcb9eb17cdffecc3c19f70765a40554fa137def2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlL58KUACgkQFYEBGcdFJfLCTgD+MQ9UqYRCcwZDstChVcjNmIif
-TUav2A+OW+vgT/dSnGMBAJhX/7PB+AP3GebN2r2Ge6Ug+QRLer5TfaXWT2m8l0/n
-=9FRK
+iF4EAREIAAYFAlL6sD8ACgkQFYEBGcdFJfKYigEAm+cPuTxQo8lMY1ugyafIMI9G
+3wJCd62lXxPdn7arJ1AA/3BKZyvrTp9qexxcxL/xTAUyzhxqeS+HEW3oFj6ldwC+
+=b5Y8
 -----END PGP SIGNATURE-----
