@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmbattery/wmbattery-2.42.ebuild,v 1.1 2014/02/11 09:42:47 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmbattery/wmbattery-2.42.ebuild,v 1.2 2014/02/11 23:20:25 voyageur Exp $
 
 EAPI=5
 inherit autotools
@@ -19,6 +19,7 @@ DEPEND="sys-apps/apmd
 	x11-libs/libX11
 	x11-libs/libXext
 	x11-libs/libXpm"
+RDEPEND="${DEPEND}"
 
 S=${WORKDIR}/${PN}
 
