@@ -1,6 +1,10 @@
 # ChangeLog for x11-plugins/wmbattery
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmbattery/ChangeLog,v 1.24 2014/02/11 09:42:47 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmbattery/ChangeLog,v 1.25 2014/02/11 23:20:25 voyageur Exp $
+
+  11 Feb 2014; Bernard Cafarelli <voyageur@gentoo.org> wmbattery-2.41.ebuild,
+  wmbattery-2.42.ebuild:
+  Fix missing RDEPEND, thanks ssuominen
 
 *wmbattery-2.42 (11 Feb 2014)
 
