@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/gstreamer
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.355 2013/10/22 07:20:26 ago Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.356 2014/02/11 23:17:31 eva Exp $
+
+*gstreamer-1.2.3 (11 Feb 2014)
+
+  11 Feb 2014; Gilles Dartiguelongue <eva@gentoo.org> -gstreamer-1.0.6.ebuild,
+  -gstreamer-1.0.7.ebuild, -gstreamer-1.0.8.ebuild, +gstreamer-1.2.3.ebuild:
+  Version bump. Clean up old revisions.
 
   22 Oct 2013; Agostino Sarubbo <ago@gentoo.org> gstreamer-1.0.10.ebuild:
   Stable for sparc, wrt bug #480908
